-Dry spells and dynasties -Copy edited/added for case two (probs too much though) -Fix sorts on case 2 -Case 2: Add search icon/bg, add local icon, reorganize to match case 1, search/filters now work, scrollytelling updated

--- a/titletowns/css/style.css
+++ b/titletowns/css/style.css
@@ -206,6 +206,12 @@ h4 {
   margin: 0 0 .75em 0;
   color: #666; }
 
+h5 {
+  color: #666;
+  font-weight: bold;
+  font-size: .8em;
+  line-height: normal; }
+
 .dark h3, .dark h4 {
   color: #b5b5b5; }
 
@@ -283,6 +289,11 @@ p.caption {
   .button.isactive {
     border-color: #191919;
     color: #191919; }
+  .button.light {
+    background-color: #b5b5b5; }
+    .button.light.isactive {
+      border-color: #b5b5b5;
+      background-color: white; }
 
 .lightgray {
   color: #666; }
@@ -558,7 +569,7 @@ input[type=range] {
       font-size: .6em;
       text-anchor: middle; }
 
-#c1locationLine {
+#c1locationLine, #c2locationLine {
   stroke: #666;
   stroke-dasharray: 1,1; }
 
@@ -625,6 +636,12 @@ input[type=range] {
   -webkit-box-shadow: 0px 0px 5px 2px rgba(153, 153, 153, 0.5);
   -moz-box-shadow: 0px 0px 5px 2px rgba(153, 153, 153, 0.5);
   box-shadow: 0px 0px 5px 2px rgba(153, 153, 153, 0.5); }
+  .d3-tip.dark-tip {
+    background: #000000;
+    color: white;
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(53, 53, 53, 0.5);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(53, 53, 53, 0.5);
+    box-shadow: 0px 0px 5px 2px rgba(53, 53, 53, 0.5); }
 
 .d3-tip .tipH {
   display: inline-block;
@@ -652,8 +669,7 @@ input[type=range] {
 
 .d3-tip p {
   font-size: .6em;
-  margin: 2px 0 8px 0;
-  color: white; }
+  margin: 2px 0 8px 0; }
 
 .group3, .group3-behind {
   pointer-events: none; }
